syntax = "proto3";
// 编译成go文件，需要go get -u github.com/golang/protobuf/protoc-gen-go（get不到就去git上下载下来放入gopath）
//protoc-gen-go目录，执行go build、go install即可在$GOPATH/bin目录下发现这个工具

enum Event
{
    EVENT_MSG_INFO = 0; // 信息
    EVENT_REGISTER_REQ = 1; // 注册请求
    EVENT_REGISTER_REP = 2; // 注册回复
    EVENT_LOGIN_REQ = 3; // 登录请求
    EVENT_LOGIN_REP = 4; // 登录回复
    EVENT_ADD_ONE_INFO = 5; // 新增信息
}


// 枚举的第一个字段必须为0
enum CodeType // Code的枚举
{
    ERR = 0;
    SUC = 1;
}

message Code // code的结构
{
    CodeType code = 1;
    string msg = 2;
}

message User // 玩家
{
    int32 id = 1;
    string name = 2;
    string pwd = 3;
}

message Info // 信息
{
    int32 userid = 1;
    int32 time = 2;
    string usetype = 3;
    int32 val = 4;
}
